# agentic-security-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  otel-collector.yaml  pyproject.toml
.github/workflows/: adversarial.yml  build.yml  ci.yml  docs.yml  release.yml  sbom.yml  security-scan.yml
connectors/github/: README.md  pyproject.toml
connectors/github/src/: __init__.py  __main__.py  common.py  detect.py  parsers.py  scanner.py  types.py  writer.py
connectors/github/src/llm/: __init__.py  anthropic_adapter.py  cache.py  file_walk.py  openai_adapter.py  orchestrator.py  prompts.py  protocol.py  schema.py  verifier.py
connectors/github/src/stacks/: __init__.py
connectors/github/src/stacks/java/: __init__.py  parsers.py  scanner.py  sdk_model_map.py
connectors/github/src/stacks/node/: __init__.py  parsers.py  scanner.py  sdk_model_map.py
connectors/github/src/stacks/python/: __init__.py  parsers.py  scanner.py  sdk_model_map.py
connectors/github/tests/: golden.py  parity.py  reconcile.py  test_detect.py  test_dispatcher.py  test_golden_diff.py  test_golden_fixtures.py  test_java_parsers.py  test_llm_cache.py  test_llm_file_walk.py  test_llm_orchestrator.py  test_llm_schema.py  test_llm_verifier.py  test_node_parsers.py  test_parity_diff.py  test_parity_python.py  test_parsers.py  test_reconcile_diff.py  test_scanner.py
connectors/github/tests/fixtures/: ai-sdk-preview-rag.llm.golden.json  customer-support-agent.llm.golden.json  vulnerable-rag-app.golden.json  vulnerable-rag-app.llm.golden.json
docs/: demo-recording-guide.md  demo-target-candidates.md  index.md  launch-execution-checklist.md  launch-post-draft.md  launch-roadmap.md  llm-scanner.md
docs/adr/: 0001-graph-first-architecture.md  0003-tenant-scoping-discipline.md  0004-saas-multi-tenancy-out-of-scope.md  0005-llm-scanner-grounding-contract.md  README.md
docs/architecture/: index.md  threat-model.md
docs/concepts/: index.md
docs/guides/: index.md
docs/reference/: index.md
examples/vulnerable-rag-app/: .gitignore  README.md  app.py  attack.py  memory.py  model.py  rag.py  requirements.txt  tools.py
examples/vulnerable-rag-app/corpus/: injected-doc.md  refund-policy.md  shipping-faq.md
examples/vulnerable-rag-app/tests/: test_attack.py
frontend/: README.md  next.config.mjs  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/app/graph/: graph-client.tsx  page.tsx
frontend/app/lib/: api.ts
policies/rules/: placeholder.rego
prompts/: README.md  extract_memory_stores.md  extract_prompt_templates.md  extract_rag_indices.md  extract_tools.md  verify_node.md
scripts/: reconcile_target.py  record_golden.py  run_adversarial_sweep.sh  run_parity_test.py  seed_graph.py
scripts/tests/: test_seed.py
targets/: ai-sdk-preview-rag.yaml  customer-support-agent.yaml  vulnerable-rag-app.yaml
